WIP: Fix light mode and dark mode colors.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /*color-scheme: light dark;*/
   color: rgba(255, 255, 255, 0.87);
-  background-color: #c9deff;
+  background-color: #697a94;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -27,7 +27,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #f7f9fc;
 }
 
 h1 {
@@ -57,7 +56,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #f7f9fc;
   }
   a:hover {
     color: #747bff;
